--- a/ac.css
+++ b/ac.css
@@ -220,6 +220,9 @@ h4.bank-name-error span {
   background-color: #fff;
   box-shadow: 0px 1px 0px #efefef;
 }
+.table-ac small {
+  padding-top: 0px;
+}
 .process-bar {
   position: fixed;
   bottom: 0;
@@ -1075,6 +1078,7 @@ h4.bank-name {
 }
 .white-header {
   padding: 7px 0 6px 0;
+  text-align: center;
 }
 .white-header img {
   padding-bottom: 12px;
@@ -1089,6 +1093,7 @@ h4.bank-name {
 @media all and (min-width: 768px) {
   .white-header {
     padding: 18px 0 20px 15px;
+    text-align: center;
   }
 }
 /*.btn {
@@ -1769,21 +1774,21 @@ label.switch-light.switch-candy {
   font-size: 18px;
   font-weight: 400;
   text-align: center;
-  box-shadow: 0px 5px 0px #3187C0;
-  background-color: #3f9bd7;
-  border-color: #3f9bd7;
-  transition: background-color 0.8s ease;
+  box-shadow: 0px 5px 0px #d85e5d;
+  background-color: #ff6f6e;
+  border-color: #ff6f6e;
+  transition: all 0.8s ease;
 }
 .btn-hybrid:hover {
-  background-color: #3187C0;
-  border-color: #3187C0;
+  background-color: #d85e5d;
+  border-color: #d85e5d;
   color: #fff;
 }
 .btn-hybrid:focus {
-  background-color: #3187C0;
+  background-color: #d85e5d;
 }
 .btn-hybrid:active {
-  background-color: #3187C0;
+  background-color: #d85e5d;
 }
 @media (min-width: 992px) {
   .btn-hybrid {
@@ -2006,8 +2011,12 @@ footer .copyright {
     height: 65px;
   }
 }
-.form-group label.tiny-caps {
-  display: none;
+.form-group label {
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 6px;
+  padding-top: 5px;
+  color: #666;
 }
 .input-group-signin {
   margin-bottom: 12px;
