--- a/ac.less
+++ b/ac.less
@@ -24,6 +24,7 @@
 @salmon: #ff6f6e;
 @salmondark: #d85e5d;
 @accent: #bbc2c5;
+@mainheadings: #444444;
 
 html {
 	height:100%;
@@ -1620,20 +1621,21 @@ th.xpadding-left-10 {
 
 .ac-alert-success {
 	color: #fff;
-    background-color: #2dc36c;
+    background-color: @accent;
     border-radius: 0;
     border: none;
     text-align: center;
-    margin-top: 14px;
+    margin-top: 11px;
     font-size:14px;
 	i {
-		color:@successgreen;
+		color:white;
 	}
 	@media all and (min-width: @screen-md) {
 		font-weight: 400;
 		font-size:16px;
 		margin-bottom:0;
 		margin-top:0;
+		padding-top:12px;
 	}
 }
 
@@ -1858,16 +1860,16 @@ label.switch-light.switch-candy {
 	display: block;
 	width: 100%;
 	color: #fff;
-   	background-color: @brightblue;
-    border-color: @brightblue;
+   	background-color: @salmon;
+    border-color: @salmon;
     transition: background-color 0.8s ease;
     height: 65px;
     border-radius: 0px;
     padding-top: 22px;
-    box-shadow: 0px 5px 0px #3187C0;
+    box-shadow: 0px 5px 0px @salmondark;
     &:hover {
-      	background-color: #3187C0;
-      	border-color:#3187C0;
+      	background-color: @salmondark;
+      	border-color:@salmondark;
       	color:#fff;
     }
 }
