--- a/css/toggle-switch.css
+++ b/css/toggle-switch.css
@@ -192,7 +192,7 @@
    }
     .switch-candy a {
       /* border: 1px solid #bbb; */
-      background-color: #efbe0c;
+      background-color: #444;
       border-radius: 2px;
       /* background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0));
       background-image: linear-gradient(to  bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0));
