--- a/ac.less
+++ b/ac.less
@@ -19,12 +19,16 @@
 @block-bg: #fbfbfb;
 @brightbluehover:darken(@brightblue, 10%);
 
-/* Rebrand Styles */
+/* Rebrand Colors */
 
 @salmon: #ff6f6e;
 @salmondark: #d85e5d;
-@accent: #bbc2c5;
+@accent: #888;
 @mainheadings: #444444;
+
+/* Alerts */
+
+@globalalertbg: #bbc2c5;
 
 html {
 	height:100%;
